# SFND_Camera

./: .gitignore  CMakeLists.txt  conanfile.py  requirements.txt
Lesson-3-Engineering_a_Collision_Detection_System/Estimating_TTC_with_Camera/TTC_camera/: CMakeLists.txt
Lesson-3-Engineering_a_Collision_Detection_System/Estimating_TTC_with_Camera/TTC_camera/src/: compute_ttc_camera.cpp
Lesson-3-Engineering_a_Collision_Detection_System/Estimating_TTC_with_Lidar/TTC_lidar/: CMakeLists.txt
Lesson-3-Engineering_a_Collision_Detection_System/Estimating_TTC_with_Lidar/TTC_lidar/src/: compute_ttc_lidar.cpp
Lesson_2-Autonomous_Vehicles_and_Computer_Vision/The_OpenCV_Library/OpenCV_exercises/: CMakeLists.txt
Lesson_2-Autonomous_Vehicles_and_Computer_Vision/The_OpenCV_Library/OpenCV_exercises/src/: change_pixels.cpp  create_matrix.cpp
